force-app/main/default/objects/Contact_Mapping__c/Contact_Mapping__c.object-meta.xml
<CustomObject>
    <label>Contact Mapping</label>
    <nameField>
        <displayFormat>CONMAP-{00000}</displayFormat>
        <label>Contact Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>