force-app/main/default/objects/Contact_Mapping__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <label>Identifier [Group Id]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>