force-app/main/default/objects/Contact_Mapping__c/fields/IEES_Id__c.field-meta.xml
<CustomField>
    <fullName>IEES_Id__c</fullName>
    <label>IEES Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>